[build-system]
requires = ["setuptools>=43.0.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "version.txt"

[tool.pytest.ini_options]
pythonpath = [
	"src"
]
log_cli = 1
log_cli_level = "error"

markers = [
    "mqtt_broker_users",
    "serial_simulate_timeout",
    "serial_exchange",
    "config_yaml"
]

[tool.pylint.main]
load-plugins = "pylint.extensions.no_self_use"
# Newer `pylint` raises errors on using `dict()`, ignore those for now
disable = "use-dict-literal"

[tool.pylint.typecheck]
signature-mutators = [
	# Ignore mutations (number of function arguments) introduced by
	# `patch.object` decorator of `unittest.mock`
	"unittest.mock._patch_object"
]
