[metadata]
name = energomera-hass-mqtt
author = Ilia Sotnikov
author_email = hostcc@gmail.com
description = HomeAssistant MQTT-based sensors for Energomera energy meters
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hostcc/energomera-hass-mqtt
project_urls =
    Bug Tracker = https://github.com/hostcc/energomera-hass-mqtt/issues
classifiers =
    Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Home Automation
	Topic :: System :: Hardware
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3 :: Only

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	iec62056-21 @ git+https://github.com/hostcc/iec62056-21.git@feature/transport-improvements
	asyncio-mqtt
	pyyaml
	schema
	addict

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    energomera-hass-mqtt = energomera_hass_mqtt:main.main
