[metadata]
name = energomera-hass-mqtt
author = Ilia Sotnikov
author_email = hostcc@gmail.com
description = HomeAssistant MQTT-based sensors for Energomera energy meters
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hostcc/energomera-hass-mqtt
project_urls =
    Bug Tracker = https://github.com/hostcc/energomera-hass-mqtt/issues
classifiers =
    Operating System :: OS Independent
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Home Automation
	Topic :: System :: Hardware
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3 :: Only

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.8
install_requires =
	iec62056-21 @ git+https://github.com/hostcc/iec62056-21.git@feature/transport-improvements
	addict==2.4.0
	aiomqtt==2.1.0
	pyyaml==6.0.1
	schema==0.7.7
	python-dateutil==2.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    energomera-hass-mqtt = energomera_hass_mqtt:main.main
